# nijn-coq-script-generation

./: .gitignore  Makefile  README.md  compile_certificates.sh  dune  dune-project  index.mld  nijn.opam  onijn.opam  run_experiments.sh
docs/: index.html
docs/onijn/: index.html
docs/onijn/Coq/: index.html
docs/onijn/Onijn/: index.html
docs/onijn/Parser/: index.html
docs/onijn/Syntax/: index.html
docs/onijn/Utils/: index.html
experiments/ho_poly/: AotoYamada_05__004.onijn  AotoYamada_05__005.onijn  AotoYamada_05__006.onijn  AotoYamada_05__009.onijn  AotoYamada_05__012.onijn  AotoYamada_05__013.onijn  AotoYamada_05__017.onijn  AotoYamada_05__022.onijn  AotoYamada_05__023.onijn  AotoYamada_05__024.onijn  AotoYamada_05__025.onijn  AotoYamada_05__028.onijn  AotoYamada_05__Ex1SimplyTyped.onijn  Applicative_05__BTreeMember.onijn  Applicative_05__Ex3Lists.onijn  Applicative_05__TakeDropWhile.onijn  Applicative_05__TreeFlatten.onijn  Applicative_05__TreeHeight.onijn  Applicative_05__TreeSize.onijn  Applicative_first_order_05__01.onijn  Applicative_first_order_05__02.onijn  Applicative_first_order_05__03.onijn  Applicative_first_order_05__06.onijn  Applicative_first_order_05__13.onijn  Applicative_first_order_05__18.onijn  Applicative_first_order_05__hydra.onijn  Mixed_HO_10_app.onijn  Mixed_HO_10_curry.onijn  Mixed_HO_10_curry1.onijn  Mixed_HO_10_filter.onijn  Mixed_HO_10_inlamb.onijn  Mixed_HO_10_loopy.onijn  Mixed_HO_10_map.onijn  Mixed_HO_10_onearg.onijn  Mixed_HO_10_prenex.onijn  Mixed_HO_10_process.onijn  Mixed_HO_10_sdu.onijn  Mixed_HO_10_uncurry.onijn  arrow.onijn  height.onijn  (+6 more)
lib/: dune
lib/coq/: dune  grammar.ml  grammar.mli  proof_script.ml  proof_script.mli
lib/data/: coqGrammar.ml  proof_script.ml
lib/file/: dune  wanda.ml
lib/parsers/: dune  parser.ml  parser.mli  parsers.ml
lib/parsers/wanda/: dune  lex.mll  par.mly  wanda_parser.ml
lib/semantics/: dune  poly.ml
lib/syntax/: dune  poly.ml  poly.mli  rule.ml  rule.mli  symb.ml  symb.mli  term.ml  term.mli  ty.ml  ty.mli
lib/utils/: dune  files.ml  list.ml  lists.ml  lists.mli
test/: dune  nijn.ml  onijn.ml  trs.wanda
(+19 files in other folders)
